--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
+    "@auth0/auth0-react": "^1.8.0",
     "@prisma/client": "^3.7.0",
+    "apollo-server-micro": "^3.6.1",
+    "graphql": "^15.6.0",
+    "graphql-relay": "^0.9.0",
+    "micro-cors": "^0.1.1",
     "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
