--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
   "dependencies": {
     "@apollo/client": "^3.5.6",
     "@auth0/auth0-react": "^1.8.0",
+    "@heroicons/react": "^1.0.5",
     "@prisma/client": "^3.7.0",
     "apollo-server-micro": "^3.6.1",
     "graphql": "^15.6.0",
     "graphql-relay": "^0.9.0",
     "micro-cors": "^0.1.1",
+    "mobx": "^6.3.10",
+    "mobx-react-lite": "^3.2.3",
     "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
     "@types/node": "^16.3.2",
     "@types/react": "^17.0.14",
